--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:fullBackupContent="false"
+        android:requestLegacyExternalStorage="true"
         android:theme="@style/AppTheme">
         <provider
             android:authorities="@string/url_host"
-            android:name="android.support.v4.content.FileProvider"
+            android:name="androidx.core.content.FileProvider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
@@ -26,7 +27,8 @@
         <activity
             android:name=".StartScreen"
             android:label="@string/app_name"
-            android:theme="@style/StartTheme">
+            android:theme="@style/StartTheme"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -36,7 +38,8 @@
             android:name=".Help"
             android:theme="@style/AppTheme.NoActionBar"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:screenOrientation="fullSensor"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
@@ -52,41 +55,41 @@
             android:name=".Login"
             android:theme="@style/AppTheme.NoActionBar"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="fullSensor"/>
         <activity
             android:name=".PasswordReset"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
+            android:screenOrientation="fullSensor"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".ChangePassword"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
+            android:screenOrientation="fullSensor"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".ForgotPassword"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
+            android:screenOrientation="fullSensor"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".Home"
             android:theme="@style/AppTheme.NoActionBar"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="fullSensor"/>
         <activity
             android:name=".FolderView"
             android:theme="@style/AppTheme.NoActionBar"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="fullSensor"/>
         <activity
             android:name=".FileRequestByEmail"
             android:theme="@style/AppTheme.NoActionBar"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="fullSensor"/>
         <activity
             android:name=".MyProfile"
             android:theme="@style/AppTheme.NoActionBar"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="fullSensor"/>
     </application>
 </manifest>
